# Job-cli

./: .gitignore  README.md  pyproject.toml
Examples/: cold_outreach.md  follow_up.md  master_resume.md  pdf-style.css.example  profiles.json.example  resume_template.md
scripts/: ai.py  autofill.py  job_scraper.py  main.py  storage.py
