[project]
name = "job-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "google-genai>=1.73.1",
    "pip>=26.0.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
]
